# apr_test_task

./: .dockerignore  .elastic.env.example  .gitignore  Dockerfile  README.md  config.py  create_sample_data.py  docker-compose.yml  docs.json  main.py  pyproject.toml  requirements.txt
src/api/: app.py  crud.py  schemas.py  search.py
src/db/: crud.py  models.py  session.py
src/elastic/: config.py  connector.py  index_mgr.py  search.py
