[project]
name = "apr-test-task"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "asyncpg>=0.31.0",
    "elasticsearch[async]>=9.4.1",
    "fastapi>=0.138.2",
    "pandas>=3.0.3",
    "psycopg>=3.3.4",
    "psycopg2>=2.9.12",
    "pydantic>=2.13.4",
    "python-dotenv>=1.2.2",
    "requests>=2.34.2",
    "sqlalchemy[asyncio]>=2.0.51",
    "uvicorn>=0.49.0",
]
